--- a/client/web/index.html
+++ b/client/web/index.html
@@ -154,7 +154,7 @@
                   <tfoot>
                     <tr>
                       <td colspan="4">
-                        <small class="pull-left text-muted" id="summary">An error occured</small>
+                        <small class="pull-left text-muted" id="summary">An error occurred</small>
                       </td>
                     </tr>
                   </tfoot>
@@ -347,7 +347,7 @@
             <!-- Modal content-->
             <div class="modal-content">
               <div class="modal-header">
-                <h4 id="modalTitle" class="modal-title">SAS informations</h4>
+                <h4 id="modalTitle" class="modal-title">SAS information</h4>
               </div>
               <div class="modal-body">
                 <table>
