[UI] Warn mess: select devices before attempting a transfer

--- a/client/web/index.html
+++ b/client/web/index.html
@@ -342,6 +342,23 @@
           </div>
         </details>
 
+        <div id="warn-select" class="modal fade" role="dialog">
+          <div class="modal-dialog">
+            <div class="modal-content bg-warning">
+              <div class="modal-header">
+                <h4 class="modal-title" data-langkey="warn-empty-select"></h4>
+              </div>
+              <button
+                  id="warn-select-close-btn"
+                  type="button"
+                  class="btn btn-secondary"
+                  data-dismiss="modal">
+                Ok
+              </button>
+            </div>
+          </div>
+        </div>
+
         <div id="modalInfos" class="modal fade" role="dialog">
           <div class="modal-dialog modal-xl">
             <!-- Modal content-->
