Review device selection in webpage of tools

--- a/client/web/index.html
+++ b/client/web/index.html
@@ -224,10 +224,7 @@
 
         <div class="d-none" id="wait-key">
           <p class="alert alert-warning d-none" id="wipe-warning" data-langkey="erasewarn"></p>
-          <h4 class="mb-1" id="key-desc">
-            <strong id="key-manuf"/>
-            <strong id="key-serial"/>
-          </h4>
+          <div class="list-group" id="tools-devices"></div>
         </div>
 
         <div class="d-none" id="tool-page">
