--- a/client/web/index.html
+++ b/client/web/index.html
@@ -298,7 +298,7 @@
           </div>
         </div>
 
-        <div class="d-flex flex-row-reverse button-bar">
+        <div class="d-flex flex-row-reverse button-bar fixed-bottom">
           <button
             id="launch-button"
             type="button"
