webclient: use local files

--- a/client/web/index.html
+++ b/client/web/index.html
@@ -21,6 +21,7 @@
 
     <!-- Main code -->
     <script src="static/js/script.js"></script>
+    <script>var API = "http://localhost:8080";</script>
   </head>
 
   <body data-state="INIT" onload="switchLanguage('fr');">
