webclient: use system Lato font

--- a/client/web/index.html
+++ b/client/web/index.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html lang="fr">
   <head>
-    <!-- Force latest IE rendering engine or ChromeFrame if installed -->
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
     <title>SASUSB</title>
@@ -10,16 +9,11 @@
       content="width=device-width, initial-scale=1, shrink-to-fit=no, user-scalable=no"
     />
     <meta name="description" content="Interface de transfert de fichier" />
-    <!-- Bootstrap styles -->
     <link rel="stylesheet" href="static/fontawesome/css/all.css" />
     <link rel="stylesheet" href="static/bs/css/bootstrap.min.css" />
-    <!-- Generic page styles -->
     <link rel="stylesheet" href="static/css/style.css" />
-    <!-- Js -->
     <script src="static/js/jquery.min.js"></script>
     <script src="static/bs/js/bootstrap.min.js"></script>
-
-    <!-- Main code -->
     <script src="static/js/script.js"></script>
     <script>var API = "http://localhost:8080";</script>
   </head>
@@ -38,7 +32,7 @@
               onclick="set_state('TOOLS');"
               data-langkey="tools"
             >
-            <!-- Outils -->
+            <!-- Tools -->
             </button>
           </div>
           <div class="btn-group mr-2" role="group">
