webclient: review ui languages loading

--- a/client/web/index.html
+++ b/client/web/index.html
@@ -13,6 +13,8 @@
     <link rel="stylesheet" href="static/bs/css/bootstrap.min.css" />
     <link rel="stylesheet" href="static/css/style.css" />
     <script src="static/bs/js/bootstrap.min.js"></script>
+    <script src="static/i18n/fr.js"></script>
+    <script src="static/i18n/en.js"></script>
     <script src="static/js/script.js"></script>
     <script>var API = "http://localhost:8080";</script>
   </head>
