Config option to change web page title

--- a/usbsas-client/web/index.html
+++ b/usbsas-client/web/index.html
@@ -23,7 +23,7 @@
     <div class="navbar sticky-top navbar-dark bg-dark">
       <div class="container">
         <img class="navbar-brand" src="static/img/usbsas-logo-w.svg" height="75px" alt="" />
-        <p class="navbar-brand" data-langkey="title">SASUSB</p>
+        <p class="navbar-brand" id="web_title">USBSAS</p>
         <div class="pull-right btn-toolbar" role="toolbar">
           <button
             id="tools-button"
